kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /statics
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              name: http
              number: 80
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: echoserver-service
            port:
              name: http
              number: 80
